<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/restaurantLogo"
        android:layout_width="75dp"
        android:layout_height="80dp"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_marginStart="2dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/minsUntilClosed"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes_until_closed"
        />

</LinearLayout>