<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/storeDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StoreDetailFragment">


    <ImageView
        android:id="@+id/coverImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="56dp"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ratingView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/deliveryFee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/deliveryFeeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerImage" />

    <TextView
        android:id="@+id/deliveryTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/deliveryTimeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerImage" />

    <TextView
        android:id="@+id/deliveryFeeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:text="@string/delivery_fee"
        app:layout_constraintBaseline_toBaselineOf="@+id/deliveryTimeLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/deliveryTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="40dp"
        android:text="@string/delivery_time"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerImage"
        app:layout_constraintVertical_bias="0.401" />

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/coverImage"
        app:layout_constraintDimensionRatio="w,2:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coverImage"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/ratingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/deliveryFeeLabel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="26dp"
        android:text="@string/call"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>